--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ NEXT_PUBLIC_URL_INSTAGRAM=https://docegeleia-6xix4sbb6-claudio-lins.vercel.app/a
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+DATABASE_URL=postgres://postgres:ojwJlSsgyw8BMcAz@db.nryweripdehutxaoczbu.supabase.co:5432/postgres?pgbouncer=true
