--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ NEXT_PUBLIC_URL_INSTAGRAM=https://docegeleia-6xix4sbb6-claudio-lins.vercel.app/a
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=postgres://postgres:ojwJlSsgyw8BMcAz@db.nryweripdehutxaoczbu.supabase.co:5432/postgres?pgbouncer=true
+
+NEXT_PUBLIC_STRIPE_URL=http://localhost:1337/api/
